fixed z-index of clouds

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   left: -500px;
   filter: drop-shadow(400px 400px 10px rgba(255, 255, 255, 0.7));
   transform: scale(2);
-  z-index: 0;
+  z-index: -2;
 }
 
 svg path {
@@ -190,7 +190,7 @@ svg path {
     85% 65%,
     100% 65%
   );
-  z-index: 2;
+  z-index: 1;
 }
 
 .wing-controls1 {
